[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Tower/Link Tower Cannon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Towers/item273.png" type="Texture" id=2]

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 0.9 ), Vector2( 1.1, 1.1 ), Vector2( 0.9, 0.9 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Shoot"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}

[node name="Link Tower" type="Node2D"]
script = ExtResource( 1 )

[node name="Attack Range Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack Range Area"]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )
anims/Shoot = SubResource( 5 )

[node name="Position2D" type="Position2D" parent="."]

[node name="Tower Base Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower Base Area"]

[node name="Link Tower Area" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Link Tower Area"]

[connection signal="area_entered" from="Attack Range Area" to="." method="_on_Attack_Range_Area_area_entered"]
[connection signal="area_exited" from="Attack Range Area" to="." method="_on_Attack_Range_Area_area_exited"]
[connection signal="area_entered" from="Link Tower Area" to="." method="_on_Link_Tower_Area_area_entered"]
[connection signal="area_exited" from="Link Tower Area" to="." method="_on_Link_Tower_Area_area_exited"]
